--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <body>
         <main>
             <div>
-            Quote 1
+                Quote 1
+            </div>
+            <div>
+                Quote 2
+            </div>
+            <div>
+                   Quote 3
             </div>
         </main>
     <footer>
