--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Notion Quotes</title>
-        <link href="styles.css" rel="stylesheet">
-    </head>
-    <body>
-        <main>
-            <div>
-                Quote 1
-            </div>
-            <div>
-                Quote 2
-            </div>
-            <div>
-                   Quote 3
-            </div>
-        </main>
-    <footer>
-    </footer>
-    </body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Challenge accepted</title>
+    <link href="styles.css" rel="stylesheet">
+  </head>
+  <body>
+    <div id="button">
+        <a id="link" href="/index2.html">Test</a>
+    </div>
+  </body>
+
 </html>
