--- a/index0.html
+++ b/index0.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Challenge accepted</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles0.css" rel="stylesheet">
   </head>
   <body>
     <div id="button">
-        <a id="link" href="/index2.html">Test</a>
+        <a id="link" href="/index.html">Test</a>
     </div>
   </body>
 
