--- a/html-01.html
+++ b/html-01.html
@@ -6,14 +6,9 @@
     <link href="html-01.css" rel="stylesheet">
   </head>
   <body>
-    <a id="button" style="cursor: pointer;" onclick="bgChange()">
+    <a id="button" href="html-02.html">
       Test
     </a>
   </body>
-  <script>
-    function bgChange() {
-        document.getElementsByTagName("BODY")[0].style.backgroundColor="red";
-    }
-  </script>
 
 </html>
