--- a/html-02.html
+++ b/html-02.html
@@ -6,9 +6,9 @@
     <link href="html-02.css" rel="stylesheet">
   </head>
   <body>
-    <div id="button">
-        <a id="link" href="">Test</a>
-    </div>
+    <a id="button" href="html-02.html">
+      Test
+    </a>
   </body>
 
 </html>
