--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Challenge accepted</title>
-    <link href="html-01.css" rel="stylesheet">
   </head>
   <body>
-    <div id="button">
-        <a id="link" href="html-02.html">Test</a>
-    </div>
+    <h1>Challenge #1: Button (HTML/CSS + JS)</h1>
+    <a href="html-01.html">HTML/CSS</a>
+    <a href="js.html">JS</a>
   </body>
 
 </html>
