--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>Challenge #1: Button (HTML/CSS + JS)</h1>
     <a href="html-01.html">HTML/CSS</a>
     <a href="js.html">JS</a>
+    <h1>Challenge #2: Canvas (JS)</h1>
+    <a href="task2.html">Canvas</a>
   </body>
 
 </html>
