Proper canvas reset
Fixed canvas reset

--- a/task2.html
+++ b/task2.html
@@ -66,10 +66,7 @@
     }
     //clears canvas.
     function removeShape(event) {
-      var oldCanvas = document.getElementById("myCanvas");
-      oldCanvas.remove();
-      posArray.length=0;
-      posArrayMain.length=0;
+      location.reload();
     }
 
   </script>
